@@ -4,6 +4,7 @@ CHANGELOG RoundCube Webmail
 2009/01/18 (alec)
 ----------
 - Fix problems with backslash as IMAP hierarchy delimiter (#1484467)
+- Secure vcard export by getting rid of preg's 'e' modifier use (#1485689)
 
 2009/01/15 (alec)
 ----------
